# Kaleidoscope

./: CMakeLists.txt  input.txt  main.cpp
include/: CodeGenerator.hpp  Driver.hpp  JIT.hpp
include/AST/: AST.hpp  AbstractSyntaxNode.hpp  BinaryExpression.hpp  CallExpression.hpp  Declaration.hpp  Expression.hpp  ForExpression.hpp  Function.hpp  IfElseExpression.hpp  NumberExpression.hpp  Printer.hpp  Prototype.hpp  Variable.hpp  Visitor.hpp
include/Parser/: Parser.hpp  Scanner.hpp
src/: CMakeLists.txt  CodeGenerator.cpp  Driver.cpp  JIT.cpp
src/AST/: BinaryExpression.cpp  CMakeLists.txt  CallExpression.cpp  Expression.cpp  ForExpression.cpp  Function.cpp  IfElseExpression.cpp  NumberExpression.cpp  Printer.cpp  Prototype.cpp  Variable.cpp
src/Parser/: CMakeLists.txt  Parser.cpp  Scanner.cpp
